imagens e mudanças no css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,54 @@
     <title>Parrot Card Game</title>
 </head>
 <body>
-    <div class="nomedojogo"><h1>PARROT CARD GAME</h1>
+    <div class="nomedojogo"><span>PARROT CARD GAME</span>
     </div>
 
-    <div></div>
+    <div class="jogo">
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+        <div class="parrots">
+            <img src="imagens/front.png">
+        </div>
+    </div>  
 
     <script src="script.js"></script>
 </body>
