Identei e voltou funcionar

--- a/index.html
+++ b/index.html
@@ -20,45 +20,19 @@
         <div class="cartas carta1 escondido" onclick="virarCarta(this)">
             <img src="imagens/front.png">
         </div>
-        <div class="cartas carta2 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta3 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta4 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta5 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta6 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta7 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta8 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta9 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta10 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta11 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta12 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta13 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
-        <div class="cartas carta14 escondido" onclick="virarCarta(this)">
-            <img src="imagens/front.png">
-        </div>
+        <div class="cartas carta2 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta3 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta4 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta5 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta6 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta7 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta8 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta9 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta10 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta11 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta12 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta13 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
+        <div class="cartas carta14 escondido" onclick="virarCarta(this)"><img src="imagens/front.png"></div>
     </div>  
 
     <script src="script.js"></script>
