Mudança no js e cartas virando

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Parrot Card Game</title>
 </head>
 <body>
-    <div class="nomedojogo"><span>PARROT CARD GAME</span>
+    <div class="nomedojogo"><h1>PARROT CARD GAME</h1>
     </div>
 
     <div class="jogo">
